RF: more exe / egg clearout
Change all exe builders to wheel builders.

Drop nibabel exe builder (leave matching wheel builder).

--- a/master.cfg
+++ b/master.cfg
@@ -936,32 +936,30 @@ c['schedulers'] = sum([
     pymvpa_bot.nightly_scheduler(['pymvpa-doc-builder'], 'doc', 4, 20, True),
     # Checks for easy_install and pip install
     # Windows 32 nightly builds
-    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 10, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'exe-33', 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'exe-34', 2, 30, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-35'], 'exe-35', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'whl-27', 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'whl-33', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'whl-34', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-35'], 'whl-35', 2, 30, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27'],
-                                  'exe-27', 2, 40, True),
-    nibabel_bot.nightly_scheduler(['nibabel-bdist32-27-whl'],
                                   'whl-27', 2, 40, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-33'],
-                                  'exe-33', 2, 50, True),
+                                  'whl-33', 2, 50, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-34'],
-                                  'exe-34', 3, 00, True),
+                                  'whl-34', 3, 00, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-35'],
-                                  'exe-35', 3, 00, True),
+                                  'whl-35', 3, 00, True),
     # Windows 64 nightly builds
     nibabel_bot.nightly_scheduler(['nibabel-bdist64-27'],
-                                  'exe64-27', 2, 00, True),
+                                  'whl64-27', 2, 00, True),
     # OSX nightlies
     nipy_bot.nightly_scheduler(['nipy-bdist-whl-2.7'], 'whl-27', 2, 20, True),
     nipy_bot.nightly_scheduler(['nipy-bdist-whl-3.3'], 'whl-33', 2, 30, True),
     # Dipy
     # Windows 32 nightly builds
-    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 10, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-exe-33', 3, 20, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-exe-34', 3, 30, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-exe-35', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-whl-27', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-whl-33', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-whl-34', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-whl-35', 3, 30, True),
     # Windows 64 nightly
     dipy_bot.nightly_scheduler(['dipy-bdist64-27'], 'dipy-whl64-27', 3, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-whl64-35', 4, 10, True),
@@ -973,9 +971,9 @@ c['schedulers'] = sum([
     sympy_bot.nightly_scheduler(['sympy-py2.6-32'], 'sympy-slow', 2, 30, True),
     # Sympy binary builders
     sympy_bot.nightly_scheduler(['sympy-bdist32-27'],
-                                  'exe-27', 5, 30, True),
+                                  'whl-27', 5, 30, True),
     sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
-                                  'exe64-27', 5, 30, True),
+                                  'whl64-27', 5, 30, True),
     # Numpy binary builders
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-2.7'], 'whl-27', 5, 30, True),
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.3'], 'whl-33', 5, 30, True),
@@ -1074,14 +1072,6 @@ c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-27',
     slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
-        'exe',
-        test_cmd = nibabel_test_cmd,
-        python = r'c:\Python27\python.exe')
-))
-c['builders'].append(BuilderConfig(
-    name='nibabel-bdist32-27-whl',
-    slavenames=win7_32_slaves,
-    factory=nibabel_bot.bdist_factory(
         'whl',
         test_cmd = nibabel_test_cmd,
         python = r'c:\Python27\python.exe')
@@ -1093,7 +1083,7 @@ c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-33',
     slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nibabel_test_cmd,
         python = r'c:\Python33\python.exe')
 ))
@@ -1101,7 +1091,7 @@ c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-34',
     slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nibabel_test_cmd,
         python = r'c:\Python34\python.exe')
 ))
@@ -1109,7 +1099,7 @@ c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-35',
     slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nibabel_test_cmd,
         python = r'c:\Python35\python.exe')
 ))
@@ -1117,7 +1107,7 @@ c['builders'].append(BuilderConfig(
     name='nibabel-bdist64-27',
     slavenames=win7_64_slaves,
     factory=nibabel_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nibabel_test_cmd,
         python = r'c:\Python27\python.exe')
 ))
@@ -1127,7 +1117,7 @@ c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python27\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
@@ -1136,7 +1126,7 @@ c['builders'].append(BuilderConfig(
     name='nipy-bdist32-33',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python33\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
@@ -1145,7 +1135,7 @@ c['builders'].append(BuilderConfig(
     name='nipy-bdist32-34',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python34\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
@@ -1154,7 +1144,7 @@ c['builders'].append(BuilderConfig(
     name='nipy-bdist32-35',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
-        'exe',
+        'whl',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python35\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
@@ -1191,7 +1181,7 @@ c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
-        'exe',
+        'whl',
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
@@ -1231,7 +1221,7 @@ c['builders'].append(BuilderConfig(
     name='dipy-bdist32-33',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
-        'exe',
+        'whl',
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
@@ -1241,7 +1231,7 @@ c['builders'].append(BuilderConfig(
     name='dipy-bdist32-34',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
-        'exe',
+        'whl',
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
@@ -2045,8 +2035,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 181)
-    assert(len(c['schedulers']) == 251)
+    assert(len(c['builders']) == 180)
+    assert(len(c['schedulers']) == 249)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
