BF: fix scheduler names for whl builds

--- a/master.cfg
+++ b/master.cfg
@@ -934,12 +934,15 @@ c['schedulers'] = sum([
     pandas_bot.nightly_scheduler(['pandas-doc-builder'], 'doc', 2, 20, True),
     statsmodels_bot.nightly_scheduler(['statsmodels-doc-builder'], 'doc', 3, 20, True),
     pymvpa_bot.nightly_scheduler(['pymvpa-doc-builder'], 'doc', 4, 20, True),
-    # Checks for easy_install and pip install
+    # Checks for pip build / install
     # Windows 32 nightly builds
-    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'whl-27', 2, 10, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'whl-33', 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'whl-34', 2, 30, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-35'], 'whl-35', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'win32-whl-27', 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'win32-whl-33', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'win32-whl-34', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-35'], 'win32-whl-35', 2, 30, True),
+    # OSX nightlies
+    nipy_bot.nightly_scheduler(['nipy-bdist-whl-2.7'], 'osx-whl-27', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-whl-3.3'], 'osx-whl-33', 2, 30, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27'],
                                   'whl-27', 2, 40, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-33'],
@@ -951,22 +954,19 @@ c['schedulers'] = sum([
     # Windows 64 nightly builds
     nibabel_bot.nightly_scheduler(['nibabel-bdist64-27'],
                                   'whl64-27', 2, 00, True),
-    # OSX nightlies
-    nipy_bot.nightly_scheduler(['nipy-bdist-whl-2.7'], 'whl-27', 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist-whl-3.3'], 'whl-33', 2, 30, True),
     # Dipy
     # Windows 32 nightly builds
-    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-whl-27', 3, 10, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-whl-33', 3, 20, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-whl-34', 3, 30, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-whl-35', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-win32-whl-27', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-win32-whl-33', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-win32-whl-34', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-35'], 'dipy-win32-whl-35', 3, 30, True),
     # Windows 64 nightly
-    dipy_bot.nightly_scheduler(['dipy-bdist64-27'], 'dipy-whl64-27', 3, 10, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-whl64-35', 4, 10, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist64-35-win10'], 'dipy-whl64-35-win10', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-27'], 'dipy-win64-whl-27', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-win64-whl-35', 4, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-35-win10'], 'dipy-win64-whl-35-win10', 3, 10, True),
     # OSX nightlies
-    dipy_bot.nightly_scheduler(['dipy-bdist-whl-2.7'], 'dipy-whl-27', 3, 20, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist-whl-3.3'], 'dipy-whl-33', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-whl-2.7'], 'dipy-osx-whl-27', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist-whl-3.3'], 'dipy-osx-whl-33', 3, 30, True),
     # Sympy slow build at night
     sympy_bot.nightly_scheduler(['sympy-py2.6-32'], 'sympy-slow', 2, 30, True),
     # Sympy binary builders
@@ -2023,7 +2023,7 @@ def _test_easy_and_no_easy(c, regex, command, expect=True):
 
 def test_easy_and_no_easy(c):
     _test_easy_and_no_easy(c, '^fail2ban-.*', expect=False, command='easy_install')
-    _test_easy_and_no_easy(c, '^nipy-.*', expect=True, command='easy_install')
+    _test_easy_and_no_easy(c, '^nipy-.*', expect=True, command='pip')
 
 
 def test_fail2ban_08_state(c):
