Use Windows 2008 server version of slave

--- a/master.cfg
+++ b/master.cfg
@@ -145,7 +145,7 @@ osx_snowleopard_slaves = ['osx-10.6']
 osx_lion_slaves = ['osx-10.7']
 osx_yosemite_slaves = ['mac-pro']
 win7_32_slaves = ['win7-32-mini']
-win7_64_slaves = ['mike-win7-64']
+win7_64_slaves = ['win-2008-64']
 win10_64_slaves = ['win10']
 arm_slaves = ['arm-raspberry-pi']
 fedora_slaves = ['i20-fed19']
