Clean up some pyflakes errors
Remove unused imports.

Undefined variable in test function

--- a/master.cfg
+++ b/master.cfg
@@ -56,7 +56,6 @@ One type of build Step is a Trigger, which activates a triggerable Scheduler,
 which can react any way it likes, including sending further BuildSets.
 """
 
-from os.path import join as pjoin
 import re
 
 # This is convenient for splitting sh commands into lists
@@ -68,11 +67,8 @@ from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
 from buildbot.schedulers.forcesched import (ForceScheduler,
-                                            FixedParameter,
-                                            ChoiceStringParameter,
                                             StringParameter)
-from buildbot.schedulers.basic import (SingleBranchScheduler,
-                                       AnyBranchScheduler)
+from buildbot.schedulers.basic import (SingleBranchScheduler)
 from buildbot.schedulers import timed
 from buildbot.schedulers.triggerable import Triggerable
 from buildbot.schedulers.trysched import Try_Jobdir
@@ -2014,11 +2010,11 @@ def _test_easy_and_no_easy(c, regex, command, expect=True):
                     raise AssertionError(
                         "%s builders should not invoke %s."
                         " Got builder %s running command %s"
-                        % (prefix, command, builder.name,
+                        % (regex, command, builder.name,
                             ' '.join(step.kwargs.get('command'))))
     if expect:
         raise AssertionError(
-            "None of the %s builders invoked expected %s" % (prefix, command))
+            "None of the %s builders invoked expected %s" % (regex, command))
 
 
 def test_easy_and_no_easy(c):
