Refactor virtualenv building, pip installs
Getting ready to make some manylinux builders

--- a/master.cfg
+++ b/master.cfg
@@ -198,6 +198,7 @@ c['slaves'] = slaves
 # --master option)
 c['slavePortnum'] = local_setup.slave_port
 
+# Helper functions and constants
 def sanitize_branch_name(name):
     return name.replace('/', '+')
 
@@ -217,7 +218,72 @@ def pyorg_pybin(pyver):
             pyver))
 
 
-# Helper functions and constants
+def needs_ignore_installed(pkg_spec):
+    # True if packages in this `pkg_spec` need ``--ignore-installed``
+    for spec in pkg_spec:
+        pkg_name = re.split('[\[ =<>!,]*', spec)[0]
+        if pkg_name in PIP_IGNORE_INSTALLS:
+            return True
+    return False
+
+
+def do_pip_install(factory, pip_depends, env, pip_args=None):
+    if pip_args is None:
+        pip_args = []
+    for pkg_spec in pip_depends:
+        if isinstance(pkg_spec, basestring):
+            pkg_spec = [pkg_spec]
+        cmd = ['pip', 'install'] + pip_args
+        # We sometimes need the 'ignore-installed' flag to force pip to install
+        # the programs in the virtualenv.  Otherwise pip finds the programs
+        # (like 'nose') already installed; these then call the system python
+        # and we don't get the virtualenv python.
+        if needs_ignore_installed(pkg_spec):
+            cmd += ['--ignore-installed']
+        factory.addStep(
+            ShellCommand(command=cmd + list(pkg_spec), env=env))
+
+
+def make_virtualenv(factory, python=None, install_pip=True,
+                    sys_site_packages=False):
+    # Obviously requires virtualenv on the slave
+    # Because of the bug in elderly easy_install, it would take into
+    # account settings present in setup.cfg and might try to install
+    # under /usr/lib as happened with fail2ban bot.  So deploy virtualenv
+    # while stepping into a new clean directory.
+    venv_params = ['--system-site-packages'] if sys_site_packages else []
+    venv_params.append('../venv')
+    if not python is None:
+        venv_params = ['--python=' + python] + venv_params
+    factory.addStep(ShellCommand(command=['virtualenv'] + venv_params,
+                                    workdir='build/mk_venv'))
+    # Now we need the venv binary directory
+    factory.addStep(FileDownload('slave_scripts/bs_tools.py',
+                                 'bs_tools.py'))
+    factory.addStep(SetPropertyFromCommand(command=[
+        'python', 'bs_tools.py', 'path-prepend-str', 'venv'],
+        property='venv_script_dir'))
+    factory.addStep(SetPropertyFromCommand(command=[
+        'python', 'bs_tools.py', 'abspath', 'venv'],
+        property='venv_dir'))
+    # Set env, with virtualenv in front of the path
+    env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
+    workdir = Interpolate("%(prop:venv_dir)s")
+    if install_pip:
+        # Upgrade pip if necessary for wheel installs
+        factory.addStep(ShellCommand(
+            command=['pip', 'install', '--ignore-installed', 'pip>=6'],
+            env=env))
+    return env, workdir
+
+
+def add_bs_tools(factory):
+    # Put bs_tools into properties in case someone needs it
+    factory.addStep(SetPropertyFromCommand(
+        command = ['python', 'bs_tools.py', 'abspath', 'bs_tools.py'],
+        property = 'bs_tools'))
+
+
 class GithubBot(object):
     """ Class to make buildbot stuff based round a github repo
     """
@@ -325,58 +391,6 @@ class GithubBot(object):
                 minute=minute,
                 onlyIfChanged=ifchanged)
 
-    def _needs_ignore_installed(self, pkg_spec):
-        # True if packages in this `pkg_spec` need ``--ignore-installed``
-        for spec in pkg_spec:
-            pkg_name = re.split('[\[ =<>!,]*', spec)[0]
-            if pkg_name in PIP_IGNORE_INSTALLS:
-                return True
-        return False
-
-    def _pip_install(self, factory, pip_depends, env):
-        for pkg_spec in pip_depends:
-            # We need the 'ignore-installed' flag to force pip to install the
-            # programs in the virtualenv.  Otherwise pip finds the programs
-            # (like 'nose') already installed; these then call the system
-            # python and we don't get the virtualenv python.
-            if isinstance(pkg_spec, basestring):
-                pkg_spec = [pkg_spec]
-            cmd = ['pip', 'install']
-            if self._needs_ignore_installed(pkg_spec):
-                cmd += ['--ignore-installed']
-            factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
-                        env=env))
-
-    def _make_virtualenv(self, factory, python=None, install_pip=True):
-        # Obviously requires virtualenv on the slave
-        # Because of the bug in elderly easy_install, it would take into
-        # account settings present in setup.cfg and might try to install
-        # under /usr/lib as happened with fail2ban bot.  So deploy virtualenv
-        # while stepping into a new clean directory.
-        venv_params = ['--system-site-packages', '../venv']
-        if not python is None:
-            venv_params = ['--python=' + python] + venv_params
-        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params,
-                                     workdir='build/mk_venv'))
-        # Now we need the venv binary directory
-        factory.addStep(FileDownload('slave_scripts/bs_tools.py',
-                                     'bs_tools.py'))
-        factory.addStep(SetPropertyFromCommand(command=[
-            'python', 'bs_tools.py', 'path-prepend-str', 'venv'],
-            property='venv_script_dir'))
-        factory.addStep(SetPropertyFromCommand(command=[
-            'python', 'bs_tools.py', 'abspath', 'venv'],
-            property='venv_dir'))
-        # Set env, with virtualenv in front of the path
-        env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
-        workdir = Interpolate("%(prop:venv_dir)s")
-        if install_pip:
-            # Upgrade pip if necessary for wheel installs
-            factory.addStep(ShellCommand(
-                command=['pip', 'install', '--ignore-installed', 'pip>=6'],
-                env=env))
-        return env, workdir
-
     def _code_build_factory(self,
                             python=None,
                             pip_depends=None,
@@ -392,14 +406,15 @@ class GithubBot(object):
                             retry=(15, 5),
                             **git_kwargs))
         # Make virtualenv, return environment, workdir of venv
-        my_env, workdir = self._make_virtualenv(
+        my_env, workdir = make_virtualenv(
             factory, python,
-            install_pip=bool(install_pip or pip_depends))
+            install_pip=bool(install_pip or pip_depends),
+            sys_site_packages=True)
         # Any pre-building commands
         for cmd in pre_build_cmds:
             factory.addStep(ShellCommand(command=cmd))
         # Add install and runtime dependencies
-        self._pip_install(factory, pip_depends, my_env)
+        do_pip_install(factory, pip_depends, my_env)
         # Show pip enviroment
         factory.addStep(ShellCommand(command=['pip', 'freeze'], env=my_env))
         # Work out working directory for install
@@ -513,9 +528,7 @@ class GithubBot(object):
             installer = ['easy_install']
         elif bdist_type == 'whl':
             # Install bdist_wheel command
-            self._pip_install(factory,
-                    ("wheel>=0.21",),
-                    env=build_env)
+            do_pip_install(factory, ("wheel>=0.21",), env=build_env)
             # Make wheel - always use virtualenv python
             factory.addStep(ShellCommand(
                 command=['python', 'setup.py', 'bdist_wheel'],
@@ -569,7 +582,7 @@ class GithubBot(object):
             workdir=build_workdir,
             **kwargs))
         # Add install and runtime dependencies
-        self._pip_install(factory, self.doc_pip_depends, my_env)
+        do_pip_install(factory, self.doc_pip_depends, my_env)
         if not doc_doctest_cmd is None:
             factory.addStep(ShellCommand(command=doc_doctest_cmd, env=my_env))
         factory.addStep(ShellCommand(command=doc_build_cmd, env=my_env))
@@ -1302,8 +1315,8 @@ for slavenames, bdist_suffix in (
             Triggerable(name=py3_sched_name, builderNames=[py3_build_name]))
     # Make builder for Python 3 bdist test
     factory = BuildFactory()
-    env, workdir = sympy_bot._make_virtualenv(factory,
-                                              'c:\Python33\python.exe')
+    env, workdir = make_virtualenv(factory, 'c:\Python33\python.exe',
+                                   sys_site_packages=True)
     # Download bdist file
     factory.addStep(
         FileDownload(Interpolate(
@@ -1356,7 +1369,7 @@ for py_ver in ('2.7', '3.3', '3.4'):
             Triggerable(name=test_scheduler_name, builderNames=[tester_name]))
     # Make downloading builder for other osx version
     factory = BuildFactory()
-    env, workdir = numpy_bot._make_virtualenv(factory, python_exe)
+    env, workdir = make_virtualenv(factory, python_exe, sys_site_packages=True)
     # Download bdist file
     factory.addStep(
         FileDownload(Interpolate(
@@ -1704,6 +1717,7 @@ c['builders'] += numpy_bot.build_builders(
     (('numpy-py3.x-sid-sparc', sparc_slaves_sid),
      ), python='python3')
 
+
 def wheel_factory(python_version, pip_installs,
                   test_commands=(),
                   find_links=(),
@@ -1719,22 +1733,11 @@ def wheel_factory(python_version, pip_installs,
         ['sudo', '/usr/local/bin/install_python.py', python_version]))
     pip_cmd = ['pip', 'install'] + ['--find-links=' + s for s in find_links]
     # Install into virtualenv
-    whl_fac.addStep(ShellCommand(command=['virtualenv', 'venv']))
-    # Now we need the venv binary directory
-    whl_fac.addStep(FileDownload('slave_scripts/bs_tools.py',
-                                 'bs_tools.py'))
-    whl_fac.addStep(SetPropertyFromCommand(
-        command = ['python', 'bs_tools.py', 'path-prepend-str', 'venv'],
-        property = 'venv_script_dir'))
+    env, workdir = make_virtualenv(whl_fac)
     whl_fac.addStep(SetPropertyFromCommand(
         command = ['python', 'bs_tools.py', 'abspath', 'venv'],
         property = 'venv_dir'))
-    whl_fac.addStep(SetPropertyFromCommand(
-        command = ['python', 'bs_tools.py', 'abspath', 'bs_tools.py'],
-        property = 'bs_tools'))
-    # Set env, with virtualenv in front of the path
-    env = {'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
-    workdir = Interpolate("%(prop:venv_dir)s")
+    add_bs_tools(whl_fac)
     for name, version, pre_tf in pip_installs:
         if version:
             if version == '-r':
