Refactor wheel_factory function into classes

--- a/master.cfg
+++ b/master.cfg
@@ -233,7 +233,7 @@ def do_pip_install(factory, pip_depends, env, pip_args=None):
     for pkg_spec in pip_depends:
         if isinstance(pkg_spec, basestring):
             pkg_spec = [pkg_spec]
-        cmd = ['pip', 'install'] + pip_args
+        cmd = ['pip', 'install'] + list(pip_args)
         # We sometimes need the 'ignore-installed' flag to force pip to install
         # the programs in the virtualenv.  Otherwise pip finds the programs
         # (like 'nose') already installed; these then call the system python
@@ -1718,47 +1718,97 @@ c['builders'] += numpy_bot.build_builders(
      ), python='python3')
 
 
-def wheel_factory(python_version, pip_installs,
-                  test_commands=(),
-                  find_links=(),
-                  build_timeout=1200):
-    """ Make a factory for the wheel build slave """
-    # OSX wheel builders
-    whl_fac = BuildFactory()
-    # Delete previous build products
-    whl_fac.addStep(ShellCommand(command=
-        ['rm', '-rf', 'venv', 'bs_tools.py']))
-    # Install fresh Python and pip
-    whl_fac.addStep(ShellCommand(command=
-        ['sudo', '/usr/local/bin/install_python.py', python_version]))
-    pip_cmd = ['pip', 'install'] + ['--find-links=' + s for s in find_links]
-    # Install into virtualenv
-    env, workdir = make_virtualenv(whl_fac)
-    whl_fac.addStep(SetPropertyFromCommand(
-        command = ['python', 'bs_tools.py', 'abspath', 'venv'],
-        property = 'venv_dir'))
-    add_bs_tools(whl_fac)
-    for name, version, pre_tf in pip_installs:
-        if version:
-            if version == '-r':
-                names = ['-r', name]
-            elif pre_tf:
-                raise ValueError("cannot use --pre flag with version")
+
+class PipInstaller(object):
+    def __init__(self,
+                 pip_installs,
+                 python=None,
+                 test_commands=(),
+                 pip_args=(),
+                 find_links=(),
+                 build_timeout=1200):
+        self.pip_installs = pip_installs
+        self.python = python
+        self.test_commands = test_commands
+        self.pip_args = pip_args
+        self.find_links = find_links
+        self.build_timeout = build_timeout
+
+    @property
+    def full_args(self):
+        return (['--find-links=' + s for s in self.find_links] +
+                list(self.pip_args))
+
+    def _make_factory(self):
+        return BuildFactory()
+
+    def _fill_factory(self, factory):
+        # Install into virtualenv
+        env, workdir = make_virtualenv(factory, python=self.python)
+        add_bs_tools(factory)
+        return factory, env, workdir
+
+    def _pip_installs(self, factory, env, workdir):
+        do_pip_install(factory, self.pip_installs, env, self.full_args)
+        return factory
+
+    def _add_tests(self, factory, env, workdir):
+        for test_command in test_commands:
+            factory.addStep(
+                ShellCommand(command=test_command,
+                             env=env,
+                             workdir=workdir,
+                             timeout=self.build_timeout))
+        return factory
+
+    def factory(self):
+        factory = self._make_factory()
+        factory, env, workdir = self._fill_factory(factory)
+        factory = self._pip_installs(factory, env, workdir)
+        return self._add_tests(factory, env, workdir), env, workdir
+
+
+class CleanInstaller(PipInstaller):
+    """ Factory for clean install of Python / pip
+    """
+    def __init__(self,
+                 python_full_version,
+                 pip_installs,
+                 python=None,
+                 test_commands=(),
+                 pip_args=(),
+                 find_links=(),
+                 build_timeout=1200):
+        self.python_full_version = python_full_version
+        super(CleanInstaller, self).__init__(
+            pip_installs, python, test_commands, pip_args, find_links,
+            build_timeout)
+
+    def _make_factory(self):
+        # Install fresh Python and pip
+        factory = BuildFactory()
+        factory.addStep(ShellCommand(command=
+            ['sudo', '/usr/local/bin/install_python.py',
+             self.python_full_version]))
+        return factory
+
+    def _pip_installs(self, factory, env, workdir):
+        # Install from name, version, pre_tf tuples
+        for name, version, pre_tf in self.pip_installs:
+            if version:
+                if version == '-r':
+                    names = ['-r', name]
+                elif pre_tf:
+                    raise ValueError("cannot use --pre flag with version")
+                else:
+                    names = ['{0}=={1}'.format(name, version)]
             else:
-                names = ['{0}=={1}'.format(name, version)]
-        else:
-            names = [name]
-        if pre_tf:
-            names = ['--pre'] + names
-        whl_fac.addStep(ShellCommand(command=pip_cmd + names,
-                                     env=env,
-                                     workdir=workdir))
-    for test_command in test_commands:
-        whl_fac.addStep(ShellCommand(command=test_command,
-                                     env=env,
-                                     workdir=workdir,
-                                     timeout=build_timeout))
-    return whl_fac
+                names = [name]
+            if pre_tf:
+                names = ['--pre'] + names
+            cmd = ['pip', 'install'] + self.full_args + names
+            factory.addStep(
+                ShellCommand(command=cmd, env=env, workdir=workdir))
 
 
 WHEEL_SERVER = HTTP_SERVER_URL
@@ -1836,28 +1886,28 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
         c['builders'].append(BuilderConfig(
             name='scipy-stack-{0}-wheel-{1}'.format(py_version, suffix),
             slavenames=osx_wheel_slaves,
-            factory = wheel_factory(py_version,
-                                    (('nose', '', pre),
-                                     ('numpy', '', pre),
-                                     ('scipy', '', pre),
-                                     ('matplotlib', '', pre),
-                                     ('numexpr', '', pre),
-                                     ('pandas', '', pre),
-                                     ('sympy', '', pre),
-                                     ('ipython[notebook,test]', '', pre),
-                                     ('h5py', '', pre)),
-                                    test_commands = test_commands,
-                                    build_timeout=2400,
-                                    find_links = find_links)))
+            factory = CleanInstaller(py_version,
+                                     (('nose', '', pre),
+                                      ('numpy', '', pre),
+                                      ('scipy', '', pre),
+                                      ('matplotlib', '', pre),
+                                      ('numexpr', '', pre),
+                                      ('pandas', '', pre),
+                                      ('sympy', '', pre),
+                                      ('ipython[notebook,test]', '', pre),
+                                      ('h5py', '', pre)),
+                                     test_commands = test_commands,
+                                     build_timeout=2400,
+                                     find_links = find_links).factory()))
     requires_builder_name = 'scipy-stack-{0}-wheel-requires'.format(py_version)
     c['builders'].append(BuilderConfig(
         name=requires_builder_name,
         slavenames=osx_wheel_slaves,
-        factory = wheel_factory(py_version,
-                                ((wheel_requires, '-r', False),),
-                                test_commands = test_commands,
-                                build_timeout=2400,
-                                find_links = ())))
+        factory = CleanInstaller(py_version,
+                                 ((wheel_requires, '-r', False),),
+                                 test_commands = test_commands,
+                                 build_timeout=2400,
+                                 find_links = ()).factory()))
     requires_scheduler_name = requires_builder_name + "-scheduler"
     build_hour += 1
     c['schedulers'].append(timed.Nightly(
@@ -2037,6 +2087,7 @@ def test_regression(c):
     assert(len(c['builders']) == 180)
     assert(len(c['schedulers']) == 249)
     # print [sc.name for sc in c['schedulers']]
+
 
 test_easy_and_no_easy(c)
 test_fail2ban_08_state(c)
