Fixes to wheel_factory refactor

--- a/master.cfg
+++ b/master.cfg
@@ -1765,7 +1765,7 @@ class PipInstaller(object):
         factory = self._make_factory()
         factory, env, workdir = self._fill_factory(factory)
         factory = self._pip_installs(factory, env, workdir)
-        return self._add_tests(factory, env, workdir), env, workdir
+        return self._add_tests(factory, env, workdir)
 
 
 class CleanInstaller(PipInstaller):
@@ -1809,6 +1809,7 @@ class CleanInstaller(PipInstaller):
             cmd = ['pip', 'install'] + self.full_args + names
             factory.addStep(
                 ShellCommand(command=cmd, env=env, workdir=workdir))
+        return factory
 
 
 WHEEL_SERVER = HTTP_SERVER_URL
