Add manylinux testers

--- a/master.cfg
+++ b/master.cfg
@@ -1812,6 +1812,15 @@ class CleanInstaller(PipInstaller):
         return factory
 
 
+def simple_tester(pkg_name, extra_args=''):
+    return ['python', '-c',
+            'import sys; '
+            'import {pkg_name}; '
+            'sys.exit(not {pkg_name}.test({extra_args}))'.format(
+                pkg_name=pkg_name,
+                extra_args=extra_args)]
+
+
 WHEEL_SERVER = HTTP_SERVER_URL
 # Cached copy of
 # https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py
@@ -1833,10 +1842,7 @@ scipy_extra_argv = ['--exclude=' + regex for regex in SCIPY_EXCLUDE_TESTS]
 scipy_test_args = 'extra_argv=[{0}]'.format(
     ', '.join(['"{0}"'.format(p) for p in scipy_extra_argv]))
 
-scipy_test_cmd = ['python', '-c',
-                  'import sys; '
-                  'import scipy; '
-                  'sys.exit(not scipy.test({0}))'.format(scipy_test_args)]
+scipy_test_cmd = simple_tester('scipy', scipy_test_args)
 mpl_test_setup1 = ['python', Property('bs_tools'), 'get-url', MPL_TESTS_URL, MPL_TESTS_FNAME]
 mpl_test_setup2 = ['python', '-c',
                    'import os, shutil; '
@@ -1844,10 +1850,7 @@ mpl_test_setup2 = ['python', '-c',
 # Known mpl test failure for Python 3.4
 # https://github.com/matplotlib/matplotlib/pull/2981
 mpl_test_cmd = ['python', MPL_TESTS_FNAME]
-numexpr_test_cmd = ['python', '-c',
-                    'import sys; '
-                    'import numexpr; '
-                    'sys.exit(not numexpr.test())']
+numexpr_test_cmd = simple_tester('numexpr')
 h5_test_cmd = ['python', '-c',
                'import sys; '
                'import unittest; '
@@ -1925,6 +1928,39 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
         properties= [StringParameter(name="wheel_requires",
                     label="set pip requires file for installation",
                     default=default_requires, size=200)]))
+
+
+test_commands = [
+    simple_tester('numpy', '"full"'),
+    simple_tester('scipy', '"full"'),
+    ['nosetests', 'numexpr'],
+    ['nosetests', 'sklearn']
+]
+
+build_hour = 12
+find_links = [
+    'https://d9a97980b71d47cde94d-aae005c4999d7244ac63632f8b80e089.ssl.cf2.rackcdn.com']
+pip_installs = ['numpy', 'scipy', 'scikit-learn', 'numexpr', 'pandas']
+for py_version in '2.7', '3.4', '3.5':
+    for suffix, slavenames in (('debian', linux_64_slaves),
+                               ('fedora', fedora_slaves)):
+        builder_name='manylinux-{0}-{1}'.format(py_version, suffix)
+        c['builders'].append(BuilderConfig(
+            name=builder_name,
+            slavenames=osx_wheel_slaves,
+            factory = PipInstaller(pip_installs,
+                                   python='/usr/bin/python' + py_version,
+                                   test_commands = test_commands,
+                                   find_links = find_links).factory()))
+    sched_name = builder_name + '-scheduler'
+    c['schedulers'].append(timed.Nightly(
+                    name=builder_name + '-scheduler',
+                    branch=None,
+                    builderNames=[builder_name],
+                    change_filter=None,
+                    hour=build_hour,
+                    minute=0,
+                    onlyIfChanged=False))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
